objects/Progetto_Utente_junction__c.object
<CustomObject>
    <fields>
        <fullName>CQS_junc_progetto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Progetto</label>
        <referenceTo>CQS_Progetto__c</referenceTo>
        <relationshipLabel>Progetto Utente junctions</relationshipLabel>
        <relationshipName>Progetto_Utente_junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_junc_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progetto_Utente_junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDO__c</fullName>
        <label>LDO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Progetto Utente junction</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Progetto Utente junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progetto Utente junctions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>